0.9.2/_sources/gallery/colorbar_tiling.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/colorbar_tiling.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_colorbar_tiling.py:


Colorbars and auto-tiling of overlays in grid mode
==================================================

Demonstrates the colorbar overlay for each layer, as well as the auto-tiling of
overlays. In addition, uses the `gridded` and `position` property of the scale
bar to show that overlays can also be auto-tiled per grid cell. This grid approach
also demonstrates that colorbars are linked to each layer in the grid, and by
toggling the grid mode off, the auto-tiling behavior can be seen.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 13-36



.. image-sg:: /gallery/images/sphx_glr_colorbar_tiling_001.png
   :alt: colorbar tiling
   :srcset: /gallery/images/sphx_glr_colorbar_tiling_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import napari

    viewer = napari.Viewer()
    layers = viewer.open_sample('napari', 'lily')

    # enable color bars, note that the colorbars will also tile according to
    # each layer in the grid
    for layer in layers:
        layer.colorbar.visible = True

    # set the scale bar to gridded mode so it appears in each grid box
    # have the position overlap with the default colorbar position
    viewer.canvas.overlays.scale_bar.visible = True
    viewer.canvas.overlays.scale_bar.position = 'top_right'
    viewer.canvas.overlays.scale_bar.gridded = True

    # enable grid with stride 2 to get layers split two-by-two
    viewer.canvas.grid.enabled = True
    viewer.canvas.grid.stride = 2
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_colorbar_tiling.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: colorbar_tiling.ipynb <colorbar_tiling.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: colorbar_tiling.py <colorbar_tiling.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: colorbar_tiling.zip <colorbar_tiling.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
